// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Arch Bot FYI Rejected Re-opens Issue in Repo Repository 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "body": "@gautamarora rejected the FYI.",
        "number": 284,
        "owner": "choosenearme",
        "repo": "fyis",
      },
    ],
    Array [
      Object {
        "body": "Request has been re-opened with comment: add point of contact",
        "number": 5,
        "owner": "choosenearme",
        "repo": "stunning-succotash",
      },
    ],
  ],
}
`;

exports[`Arch Bot FYI Rejected Re-opens Issue in Repo Repository 2`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "name": "fyi-submitted",
        "number": 284,
        "owner": "choosenearme",
        "repo": "fyis",
      },
    ],
  ],
}
`;

exports[`Arch Bot FYI Rejected Re-opens Issue in Repo Repository 3`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "labels": Array [
          "fyi-requested",
        ],
        "number": 284,
        "owner": "choosenearme",
        "repo": "fyis",
      },
    ],
  ],
}
`;

exports[`Arch Bot FYI Rejected Re-opens Issue in Repo Repository 4`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "number": 5,
        "owner": "choosenearme",
        "repo": "stunning-succotash",
        "state": "open",
      },
    ],
  ],
}
`;

exports[`Arch Bot FYI Rejected Re-opens Issue in Repo Repository 5`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "body": "@gautamarora rejected the FYI.",
        "number": 284,
        "owner": "choosenearme",
        "repo": "fyis",
      },
    ],
    Array [
      Object {
        "body": "Request has been re-opened with comment: add point of contact",
        "number": 5,
        "owner": "choosenearme",
        "repo": "stunning-succotash",
      },
    ],
  ],
}
`;
